--- a/Views/Cursoes/Cursos.cshtml
+++ b/Views/Cursoes/Cursos.cshtml
@@ -22,18 +22,22 @@
 <div class="mt-2 mb-2 container">
     <h2>Cursos</h2>
     <img id="anuncio" src="~/Images/1.jpg" class="container" alt="#" />
-    
-    <br/><br/>
-    <div class="col-6">
-        <form asp-controller="Cursoes" asp-action="Cursos" method="post">
-            <div class="input-group input-group-sm mb-3">
-                <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Digite o Curso</span>
+
+    <br /><br />
+        <form class="row" asp-controller="Cursoes" asp-action="Cursos" method="post">
+            <div class="col-6">
+                <div class="input-group input-group-sm mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="inputGroup-sizing-sm">Digite o Curso</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
                 </div>
-                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
-            </div><button type="submit" class="btn btn-success">Procurar</button>
+            </div>
+            <div class="col-6">
+                <button type="submit" class="btn-sm btn-success">Procurar</button>
+            </div>
         </form>
-    </div>
+
 
     <div class="row mt-3">
         @foreach (var item in Model)
@@ -43,7 +47,7 @@
                     <img src="~/assets/img/Cursos/@item.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">@item.Nome</h5>
-                        <p class="card-text">Curso mais didático e completo de Java e OO. UML, JDBC, JavaFX, Spring Boot, JPA, Hibernate, MySQL, MongoDB e muito mais.</p>
+                        <p class="card-text">@item.Descricao</p>
                     </div>
                     <div class="card-footer text-right">
                         @Html.ActionLink("Comece agora!", "Aula", "Cursoes", new { id = item.Id }, new { @class = "btn btn-primary", @role = "button" })
