--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -543,7 +543,7 @@
                     </div>
 
                     <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
-                        <form action="~/forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form  method="post" role="form" class="php-email-form">
                             <div class="form-row">
                                 <div class="col-lg-6 form-group">
                                     <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -567,7 +567,7 @@
                                 <div class="error-message"></div>
                                 <div class="sent-message">Your message has been sent. Thank you!</div>
                             </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-center"><button type="submit">Envie uma mensagem</button></div>
                         </form>
                     </div>
 
