--- a/Views/Usuario_has_curso/MeusCursos.cshtml
+++ b/Views/Usuario_has_curso/MeusCursos.cshtml
@@ -33,7 +33,7 @@
                         <img src="~/assets/img/Cursos/@item.Curso.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">@item.Curso.Nome</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">@item.Curso.Descricao</p>
                         </div>
                     </div>
                 </a>
