Link para certificado

--- a/Views/Usuarios/Index.cshtml
+++ b/Views/Usuarios/Index.cshtml
@@ -560,7 +560,7 @@
                         <li class="menu-content-item"><a href="#">Continue<br />Estudando</a></li>
                         <li class="menu-content-item"><a href="~/Usuario_has_curso/MeusCursos">Meus<br />Cursos</a></li>
                         <li class="menu-content-item"><a href="#">Meus<br />Exercícios</a></li>
-                        <li class="menu-content-item"><a href="~/Views/Usuarios/MeuCertificado.cshtml">Meus<br />Certificados</a></li>
+                        <li class="menu-content-item"><a href="~/Usuarios/MeuCertificado">Meus<br />Certificados</a></li>
                         <li class="menu-content-item"><a href="#">Plano de<br />Estudos</a></li>
                         <li class="menu-content-item"><a href="#">Simulados</a></li>
 
