--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -542,35 +542,17 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
-                        <form  method="post" role="form" class="php-email-form">
-                            <div class="form-row">
-                                <div class="col-lg-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                    <div class="validate"></div>
-                                </div>
-                                <div class="col-lg-6 form-group">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email" />
-                                    <div class="validate"></div>
-                                </div>
+                    @using (Html.BeginForm("EnviaEmail", "Home", FormMethod.Post))
+                    {
+                        <div>
+                            <br />
+                            <div>
+                                @Html.TextBox("txtEmail", "", new { @class = "form-control" })
                             </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Menssagem"></textarea>
-                                <div class="validate"></div>
-                            </div>
-                            <div class="mb-3">
-                                <div class="loading">Loading</div>
-                                <div class="error-message"></div>
-                                <div class="sent-message">Your message has been sent. Thank you!</div>
-                            </div>
-                            <div class="text-center"><button type="submit">Envie uma mensagem</button></div>
-                        </form>
-                    </div>
 
+                            <button class="btn btn-success">Enviar</button>
+                        </div>
+                    }
                 </div>
 
             </div>
