--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -105,6 +105,36 @@
         </div>
     </header><!-- End Header -->
 
+    <script src="https://cdn.tiny.cloud/1/no-apikey/tinymce/5/tinymce.min.js"
+            referrerpolicy="origin"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetale
+rt.min.js"></script>
+    @if (TempData["MSG"] != null)
+    {
+        <script>
+$(document).ready(function () {
+var titulo = "";
+switch ("@TempData["MSG"].ToString().Split('|')[0]") {
+case "success":
+titulo = "Sucesso";
+break;
+case "warning":
+titulo = "Atenção";
+break;
+case "error":
+titulo = "Erro";
+break;
+case "info":
+titulo = "Informação";
+break;
+}
+swal(titulo, "@Html.Raw(TempData["MSG"].ToString().Split('|')[1])",
+"@TempData["MSG"].ToString().Split('|')[0]");
+});
+        </script>
+    }
+
 
 
 
@@ -199,35 +229,5 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <!-- Scripts para o Esqueceu Senha!!!-->
-    <script src="https://cdn.tiny.cloud/1/no-apikey/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
-    <script>tinymce.init({ selector: 'textarea' });</script>
-
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-    @if (TempData["MSG"] != null)
-    {
-        <script>
-            $(document).ready(function () {
-            var titulo = "";
-            switch ("@TempData["MSG"].ToString().Split('|')[0]") {
-            case "success":
-            titulo = "Sucesso";
-            break;
-            case "warning":
-            titulo = "Atenção";
-            break;
-            case "error":
-            titulo = "Erro";
-            break;
-            case "info":
-            titulo = "Informação";
-                        break;
-                }swal(titulo, "@Html.Raw(TempData["MSG"].ToString().Split('|')[1])", "@TempData["MSG"].ToString().Split('|')[0]");
-            });
-        </script>
-    }
-
-    @RenderSection("scripts", required: false)
-</body>
 </html>
