Enviar email de contato(Terminado)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{ ViewBag.Title = "Home Page"; }
+﻿@model _30Code.Models.Mensagem
+
+@{ ViewBag.Title = "Home Page"; }
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -289,7 +291,6 @@
                                 <h4 class="title"><a href="">Lorem Ipsum</a></h4>
                                 <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
                             </div>
-
                             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                                 <div class="icon"><i class="bx bx-gift"></i></div>
                                 <h4 class="title"><a href="">Nemo Enim</a></h4>
@@ -305,47 +306,38 @@
         <!-- ======= About Lists Section ======= -->
         <!--<section class="about-lists">
             <div class="container">
-
                 <div class="row no-gutters">
-
                     <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up">
                         <span>01</span>
                         <h4>Lorem Ipsum</h4>
                         <p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
                     </div>
-
                     <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
                         <span>02</span>
                         <h4>Repellat Nihil</h4>
                         <p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
                     </div>
-
                     <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
                         <span>03</span>
                         <h4> Ad ad velit qui</h4>
                         <p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
                     </div>
-
                     <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
                         <span>04</span>
                         <h4>Repellendus molestiae</h4>
                         <p>Inventore quo sint a sint rerum. Distinctio blanditiis deserunt quod soluta quod nam mider lando casa</p>
                     </div>
-
                     <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="400">
                         <span>05</span>
                         <h4>Sapiente Magnam</h4>
                         <p>Vitae dolorem in deleniti ipsum omnis tempore voluptatem. Qui possimus est repellendus est quibusdam</p>
                     </div>
-
                     <div class="col-lg-4 col-md-6 content-item" data-aos="fade-up" data-aos-delay="500">
                         <span>06</span>
                         <h4>Facilis Impedit</h4>
                         <p>Quis eum numquam veniam ea voluptatibus voluptas. Excepturi aut nostrum repudiandae voluptatibus corporis sequi</p>
                     </div>
-
                 </div>
-
             </div>
         </section>-->
         <!-- End About Lists Section -->
@@ -542,19 +534,39 @@
                         </div>
                     </div>
 
-                    @using (Html.BeginForm("EnviaEmail", "Home", FormMethod.Post))
-                    {
-                        <div>
-                            <br />
-                            <div>
-                                @Html.TextBox("txtEmail", "", new { @class = "form-control" })
+                    <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
+
+                            <div class="php-email-form">
+                                <div class="form-row">
+                                    <div class="col-lg-6 form-group">
+                                        @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                                    </div>
+                                    <div class="col-lg-6 form-group">
+                                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                                        @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Assunto, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.EditorFor(model => model.Assunto, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Assunto, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.CorpoMsg, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.EditorFor(model => model.CorpoMsg, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.CorpoMsg, "", new { @class = "text-danger" })
+                                </div>
+                                <div class="text-center"><button type="submit">Envie uma mensagem</button></div>
                             </div>
-
-                            <button class="btn btn-success">Enviar</button>
-                        </div>
-                    }
+                        }
+                    </div>
                 </div>
-
             </div>
         </section><!-- End Contact Us Section -->
 
@@ -562,4 +574,3 @@
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 </body>
-
