--- a/Views/Usuario_has_curso/MeusCursos.cshtml
+++ b/Views/Usuario_has_curso/MeusCursos.cshtml
@@ -32,8 +32,8 @@
                     <div class="card h-100 shadow-lg">
                         <img src="~/assets/img/Cursos/@item.Curso.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">@item.Curso.Nome</h5>
-                            <p class="card-text">@item.Curso.Descricao</p>
+                            <h5 class="card-title" style="text-align: center"><strong>@item.Curso.Nome</strong> </h5>
+                            <p class="card-text" style="text-align: center">@item.Curso.Descricao</p>
                         </div>
                     </div>
                 </a>
