--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -72,6 +72,7 @@
         background: #6959CD;
         color: #fff;
         transition: all 0.3s;
+        border-radius: 0 20px 0 0;
     }
 
         #sidebar.active {
@@ -81,6 +82,7 @@
         #sidebar .sidebar-header {
             padding: 20px;
             background: #836FFF;
+            border-radius: 0 20px 0 0;
         }
 
         #sidebar ul.components {
