--- a/Views/Cursoes/Cursos.cshtml
+++ b/Views/Cursoes/Cursos.cshtml
@@ -24,19 +24,19 @@
     <img id="anuncio" src="~/Images/1.jpg" class="container" alt="#" />
 
     <br /><br />
-        <form class="row" asp-controller="Cursoes" asp-action="Cursos" method="post">
-            <div class="col-6">
-                <div class="input-group input-group-sm mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="inputGroup-sizing-sm">Digite o Curso</span>
-                    </div>
-                    <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
+    <form class="row" asp-controller="Cursoes" asp-action="Cursos" method="post">
+        <div class="col-6">
+            <div class="input-group input-group-sm mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Digite o Curso</span>
                 </div>
+                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
             </div>
-            <div class="col-6">
-                <button type="submit" class="btn-sm btn-success">Procurar</button>
-            </div>
-        </form>
+        </div>
+        <div class="col-6">
+            <button type="submit" class="btn-sm btn-success">Procurar</button>
+        </div>
+    </form>
 
 
     <div class="row mt-3">
@@ -46,8 +46,8 @@
                 <div class="card h-100 shadow-lg">
                     <img src="~/assets/img/Cursos/@item.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">@item.Nome</h5>
-                        <p class="card-text">@item.Descricao</p>
+                        <h5 class="card-title" style="text-align: center"><strong>@item.Nome</strong> </h5>
+                        <p class="card-text" style="text-align: center">@item.Descricao</p>
                     </div>
                     <div class="card-footer text-right">
                         @Html.ActionLink("Comece agora!", "Aula", "Cursoes", new { id = item.Id }, new { @class = "btn btn-primary", @role = "button" })
