--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -224,20 +224,20 @@
                                         if (ane.Tipos.ToString().Equals("Apostila"))
                                         {
                                             <li>
-                                                <button class="a link" href="~/@ane.Url" onclick="mostrar('div1')">@ane.Tipos</button>
+                                                <button class="a link" href="~/@ane.Url" onclick="mostraDiv('div1','div2','div_@cont.Id')">@ane.Tipos</button>
                                             </li>
                                         }
                                         else
                                         {
                                             <li>
-                                                <button class="b link" href="~/@ane.Url" onclick="mostrar('div2')">@ane.Tipos</button>
+                                                <button class="b link" href="~/@ane.Url" onclick="mostraDiv('div2','div1','div_@cont.Id')">@ane.Tipos</button>
                                             </li>
                                         }
                                     }
                                     @*@if (dia != 1)
                                         {*@
                                     <li>
-                                        <button class="link" onclick="mostrar('div_@cont.Id');">prova</button>
+                                        <button class="c link" onclick="mostraDiv('div_@cont.Id','div1','div2')">prova</button>
                                     </li>
                                     @*}*@
                                     @{
@@ -273,13 +273,13 @@
             </div>
         </nav>
         <div id="pai">
-            <div id="div1" class="hidden">
+            <div id="div1" name="div" class="hidden">
                 <iframe style="width:100%; height:590px; border:none;" src="" frameborder="0"></iframe>
             </div>
-            <div id="div2" class="hidden">
+            <div id="div2" name="div" class="hidden">
                 <form class="video-container">
-                    <video preload="none" class="jlplayer-video">
-                        <source src="" type="video/mp4">
+                    <video preload="none" src="" class="jlplayer-video">
+                        @*<source src="" type="video/mp4">*@
                         <!-- <track kind="captions" src="legenda.vtt" default> -->
                     </video>
                 </form>
@@ -289,7 +289,7 @@
                 {
                     foreach (var cont in mod.ConteudoVMs)
                     {
-                        <div id="div_@cont.Id" class="hidden">
+                        <div id="div_@cont.Id" name="div" class="hidden">
                             @Html.Partial("_Quizz", cont)
                         </div>
                     }
@@ -311,21 +311,51 @@
         });
     });
 
-    function mostrar(id) {
-        $('#pai > div').each(function () {
+    //function mostrar(id) {
+    //    $('#pai > div').each(function () {
+    //        $(this).hide();
+    //    });
+    //    $("#" + id).show();
+    //}
+
+    function mostraDiv(id, div2, div3) {
+        var divstyle = new String();
+        divstyle = document.getElementById(id).style.display;
+
+        var divAux = new String();
+        divAux = document.getElementById(div2).style.display;
+
+        var divAux3 = new String();
+        divAux3 = document.getElementById(div3).style.display;
+
+        var divAux4 = document.getElementsByName('div');
+
+        if ((divstyle == "block" || divstyle == "") || (divAux == "block" || divAux == "") || (divAux3 == "block" || divAux3 == "")) {
+            document.getElementById(div2).style.display = "none";
+            document.getElementById(div3).style.display = "none";
+        }
+
+        $(divAux4).each(function () {
             $(this).hide();
         });
-        $("#" + id).show();
+
+        document.getElementById(id).style.display = "block";
+        return false;
     }
 
     $('.a').click(function () {
         const link = $(this).attr('href')
         $('iframe').attr('src', link)
+        $('video').attr('src', "")
     })
 
     $('.b').click(function () {
         const link = $(this).attr('href')
-        $('source').attr('src', link)
+        $('video').attr('src', link)
+    })
+
+    $('.c').click(function () {
+        $('video').attr('src', "")
     })
 
     //$('.div-sel').hide();
