--- a/Views/Usuarios/Edit.cshtml
+++ b/Views/Usuarios/Edit.cshtml
@@ -10,7 +10,7 @@
         }
     </style>
 
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Edit", "Usuarios", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -18,7 +18,7 @@
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -27,7 +27,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.UrlImagem, htmlAttributes: new { @class = "control-label col-md-12" })
+                        <div class="col-md-10">
+                            <input name="arq" class="form-control" type="file" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -37,7 +45,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Celular, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -46,7 +54,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         <label>&nbsp;&nbsp;&nbsp; Nascimento</label>
                         <div class="col-md-10">
@@ -55,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Sexos, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -64,7 +72,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
@@ -73,9 +81,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ConfirmaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.ConfirmaSenha, htmlAttributes: new { @class = "control-label col-md-12" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.ConfirmaSenha, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.ConfirmaSenha, "", new { @class = "text-danger" })
@@ -83,8 +91,8 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-10">
+            <div class="form-group mt-3">
+                <div class="col-11">
                     <input type="submit" value="Save" class="btn btn-default btn-block" />
                 </div>
             </div>
