--- a/Views/Cursoes/_Quizz.cshtml
+++ b/Views/Cursoes/_Quizz.cshtml
@@ -146,11 +146,12 @@
 @using (Html.BeginForm("Resposta", "Cursoes"))
 {
     var contador = 1;
-    @Html.HiddenFor(model => model.Id)
+    @Html.HiddenFor(model => Model.Id)
 
     for (int i = 0; i < Model.QuestaoVMs.Count(); i++)
     {
         @Html.HiddenFor(model => Model.QuestaoVMs[i].Id)
+        @Html.HiddenFor(model => Model.QuestaoVMs[i].ConteudoId)
         @Html.HiddenFor(model => Model.QuestaoVMs[i].Titulo)
 
         <p id="qtext">@Model.QuestaoVMs[i].Titulo</p>
@@ -165,7 +166,7 @@
             </label>
         }
     }
-    <button id="resposta" type="submit" class="answerbutton w3-btn">Confirmar resposta</button>
+    <button id="resposta_@Model.Id" type="submit" class="answerbutton w3-btn">Confirmar resposta</button>
 }
 
 <script>
