--- a/Views/Usuario_has_curso/MeusCursos.cshtml
+++ b/Views/Usuario_has_curso/MeusCursos.cshtml
@@ -4,32 +4,14 @@
     ViewBag.Title = "MeusCursos";
 }
 
-<style>
-    .card {
-        border-radius: 20px;
-        width: 17rem;
-    }
-
-    @@media(max-width: 1200px) {
-        .card {
-            width: 100%;
-        }
-    }
-
-    a, a:hover {
-        text-decoration: none;
-        color: black;
-    }
-</style>
-
 <div class="mt-2 mb-2 container">
     <h2>Meus Cursos</h2>
     <div class="row mt-3">
         @foreach (var item in Model)
         {
             <div class="col-lg-3 col-md-6 col-sm-12 mt-1 mb-2">
-                <a href="@Url.Action("Aula", "Cursoes", new { id = item.Curso.Id })" role="button">
-                    <div class="card h-100 shadow-lg">
+                <a name="PagMeusCursos" href="@Url.Action("Aula", "Cursoes", new { id = item.Curso.Id })" role="button">
+                    <div name="PagCursos" class="card h-100 shadow-lg">
                         <img src="~/assets/img/Cursos/@item.Curso.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                         <div class="card-body">
                             <h5 class="card-title" style="text-align: center"><strong>@item.Curso.Nome</strong> </h5>
@@ -39,7 +21,6 @@
                 </a>
             </div>
         }
-
     </div>
 </div>
 
