--- a/Views/Cursoes/Aula.cshtml
+++ b/Views/Cursoes/Aula.cshtml
@@ -1,179 +1,6 @@
 ﻿@model _30Code.Models.Aula
 
 @{ ViewBag.Title = "Aula"; }
-<style>
-    body {
-        /*        background: #f5f9fc;
-    */
-    }
-
-    a,
-    a:hover,
-    a:focus {
-        color: inherit;
-        text-decoration: none;
-        transition: all 0.3s;
-    }
-
-    .hidden {
-        display: none;
-    }
-
-    /* ---------------------------------------------------
-                SIDEBAR STYLE
-            ----------------------------------------------------- */
-
-
-    .link {
-        border: 0;
-        cursor: pointer;
-        padding: 0;
-        width: 100%;
-        text-align: justify;
-    }
-
-    button,
-    button:hover,
-    button:focus {
-        color: inherit;
-        text-decoration: none;
-        transition: all 0.3s;
-        outline: none;
-        box-shadow: none;
-    }
-
-    #sidebar ul li button {
-        padding: 10px;
-        font-size: 1.1em;
-        display: block;
-    }
-
-        #sidebar ul li button:hover {
-            color: #7386D5;
-            background: #fff;
-        }
-
-    ul ul button {
-        font-size: 0.9em !important;
-        padding-left: 30px !important;
-        background: #836FFF;
-    }
-
-
-    .wrapper {
-        display: flex;
-        width: 100%;
-        align-items: stretch;
-    }
-
-    #sidebar {
-        min-width: 450px;
-        max-width: 450px;
-        background: #6959CD;
-        color: #fff;
-        transition: all 0.3s;
-        border-radius: 0 20px 0 0;
-    }
-
-        #sidebar.active {
-            margin-left: -450px;
-        }
-
-        #sidebar .sidebar-header {
-            padding: 20px;
-            background: #836FFF;
-            border-radius: 0 20px 0 0;
-        }
-
-        #sidebar ul.components {
-            padding: 20px 0;
-            border-bottom: 1px solid #47748b;
-        }
-
-        #sidebar ul p {
-            color: #fff;
-            padding: 0px;
-            text-align: center;
-        }
-
-    p,
-    label {
-        font: 1rem 'Fira Sans', sans-serif;
-    }
-
-    input {
-        margin: .4rem;
-    }
-
-    #sidebar ul li a {
-        padding: 10px;
-        font-size: 1.1em;
-        display: block;
-    }
-
-        #sidebar ul li a:hover {
-            color: #7386D5;
-            background: #fff;
-        }
-
-
-    a[data-toggle="collapse"] {
-        position: relative;
-    }
-
-    #sidebar .dropdown-toggle::after {
-        display: block;
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translateY(-50%);
-    }
-
-
-    ul.CTAs {
-        padding: 20px;
-    }
-
-    /* ---------------------------------------------------
-                CONTENT STYLE
-            ----------------------------------------------------- */
-
-    #content {
-        width: 100%;
-        padding: 20px;
-        min-height: 100vh;
-        transition: all 0.3s;
-    }
-
-    /* ---------------------------------------------------
-                MEDIAQUERIES
-            ----------------------------------------------------- */
-
-    @@media (max-width: 768px) {
-        #sidebar {
-            margin-left: -372px;
-        }
-
-            #sidebar.active {
-                margin-left: 0;
-            }
-
-        #sidebarCollapse span {
-            display: none;
-        }
-    }
-
-
-    /*VIDEO*/
-    *, *::before, *::after {
-        margin: 0;
-        padding: 0;
-    }
-
-    .video-container {
-        width: 95%;
-    }
-</style>
 
 <!-- Font Awesome JS -->
 <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
@@ -193,7 +20,7 @@
                 <ul class="list-unstyled components">
                     @foreach (var mod in Model.CursoVMs.Modulos)
                     {
-                        <p>@mod.Titulo</p>
+                        <p name="PagAula">@mod.Titulo</p>
                         var conclusao = "";
                         if (dia == 1)
                         {
@@ -206,13 +33,13 @@
                                 @if (conclusao != "")
                                 {
 
-                                    <a href="#homeSubmenu_@i" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                                    <a name="PagAula" href="#homeSubmenu_@i" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                                         Dia @dia - @cont.Titulo
                                     </a>
                                 }
                                 else
                                 {
-                                    <a href="#homeSubmenu_@i" disabled="disabled" aria-expanded="false" class="dropdown-toggle">
+                                    <a name="PagAula" href="#homeSubmenu_@i" disabled="disabled" aria-expanded="false" class="dropdown-toggle">
                                         Dia @dia - @cont.Titulo
                                         <i class="icofont-lock" style="float:right; padding-right:6px;"></i>
                                     </a>
@@ -224,20 +51,20 @@
                                         if (ane.Tipos.ToString().Equals("Apostila"))
                                         {
                                             <li>
-                                                <button class="a link" href="~/@ane.Url" onclick="mostraDiv('div1','div2','div_@cont.Id')">@ane.Tipos</button>
+                                                <button name="PagAula" class="a link" href="~/@ane.Url" onclick="mostraDiv('div1','div2','div_@cont.Id')">@ane.Tipos</button>
                                             </li>
                                         }
                                         else
                                         {
                                             <li>
-                                                <button class="b link" href="~/@ane.Url" onclick="mostraDiv('div2','div1','div_@cont.Id')">@ane.Tipos</button>
+                                                <button name="PagAula" class="b link" href="~/@ane.Url" onclick="mostraDiv('div2','div1','div_@cont.Id')">@ane.Tipos</button>
                                             </li>
                                         }
                                     }
                                     @*@if (dia != 1)
                                         {*@
                                     <li>
-                                        <button class="c link" onclick="mostraDiv('div_@cont.Id','div1','div2')">prova</button>
+                                        <button name="PagAula" class="c link" onclick="mostraDiv('div_@cont.Id','div1','div2')">prova</button>
                                     </li>
                                     @*}*@
                                     @{
@@ -266,7 +93,7 @@
     <div id="content">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                <button  type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
                     <span>Conteúdo</span>
                 </button>
