--- a/Views/Cursoes/Cursos.cshtml
+++ b/Views/Cursoes/Cursos.cshtml
@@ -1,24 +1,5 @@
 ﻿@model IEnumerable<_30Code.Models.Curso>
 
-<style>
-    .card {
-        border-radius: 20px;
-        width: 17rem;
-    }
-
-    @@media(max-width: 1200px) {
-        .card {
-            width: 100%;
-        }
-    }
-
-    @@media(max-width: 800px) {
-        #anuncio {
-            display: none;
-        }
-    }
-</style>
-
 <div class="mt-2 mb-2 container">
     <h2>Cursos</h2>
     <img id="anuncio" src="~/Images/1.jpg" class="container" alt="#" />
@@ -43,7 +24,7 @@
         @foreach (var item in Model)
         {
             <div class="col-lg-3 col-md-6 col-sm-12 mt-1 mb-2">
-                <div class="card h-100 shadow-lg">
+                <div name="PagCursos" class="card h-100 shadow-lg">
                     <img src="~/assets/img/Cursos/@item.Url_imagem" class="card-img-top" style="border-radius: 20px 20px 0 0" alt="...">
                     <div class="card-body">
                         <h5 class="card-title" style="text-align: center"><strong>@item.Nome</strong> </h5>
