--- a/Views/Usuarios/SejaPremium.cshtml
+++ b/Views/Usuarios/SejaPremium.cshtml
@@ -4,307 +4,11 @@
 }
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" />
-<style>
-    * {
-        margin: 0;
-        padding: 0
-    }
 
-    html {
-        height: 100%
-    }
-
-    p {
-        color: grey;
-        font-size: 20px;
-    }
-
-    #heading {
-        text-transform: uppercase;
-        color: #673AB7;
-        font-weight: normal
-    }
-
-    #msform {
-        text-align: center;
-        position: relative;
-        margin-top: 20px
-    }
-
-        #msform fieldset {
-            background: white;
-            border: 0 none;
-            border-radius: 0.5rem;
-            box-sizing: border-box;
-            width: 100%;
-            margin: 0;
-            padding-bottom: 20px;
-            position: relative
-        }
-
-    .form-card {
-        text-align: left
-    }
-
-    #msform fieldset:not(:first-of-type) {
-        display: none
-    }
-
-    #msform .action-button {
-        width: 100px;
-        background: #673AB7;
-        font-weight: bold;
-        color: white;
-        border: 0 none;
-        border-radius: 0px;
-        cursor: pointer;
-        padding: 10px 5px;
-        margin: 10px 0px 10px 5px;
-        float: right
-    }
-
-        #msform .action-button:hover,
-        #msform .action-button:focus {
-            background-color: #311B92
-        }
-
-    #msform .action-button-previous {
-        width: 100px;
-        background: #616161;
-        font-weight: bold;
-        color: white;
-        border: 0 none;
-        border-radius: 0px;
-        cursor: pointer;
-        padding: 10px 5px;
-        margin: 10px 5px 10px 0px;
-        float: right
-    }
-
-        #msform .action-button-previous:hover,
-        #msform .action-button-previous:focus {
-            background-color: #000000
-        }
-
-    .card {
-        z-index: 0;
-        border: none;
-        position: relative
-    }
-
-    .fs-title {
-        font-size: 25px;
-        color: #673AB7;
-        margin-bottom: 15px;
-        font-weight: normal;
-        text-align: left
-    }
-
-    .purple-text {
-        color: #673AB7;
-        font-weight: normal
-    }
-
-    .steps {
-        font-size: 25px;
-        color: gray;
-        margin-bottom: 10px;
-        font-weight: normal;
-        text-align: right
-    }
-
-    .fieldlabels {
-        color: gray;
-        text-align: left
-    }
-
-    #progressbar {
-        margin-bottom: 30px;
-        overflow: hidden;
-        color: lightgrey
-    }
-
-        #progressbar .active {
-            color: #673AB7
-        }
-
-        #progressbar li {
-            list-style-type: none;
-            font-size: 15px;
-            width: 25%;
-            float: left;
-            position: relative;
-            font-weight: 400
-        }
-
-        #progressbar #account:before {
-            font-family: FontAwesome;
-            content: "\f13e"
-        }
-
-        #progressbar #personal:before {
-            font-family: FontAwesome;
-            content: "\f007"
-        }
-
-        #progressbar #payment:before {
-            font-family: FontAwesome;
-            content: "\f030"
-        }
-
-        #progressbar #confirm:before {
-            font-family: FontAwesome;
-            content: "\f00c"
-        }
-
-        #progressbar li:before {
-            width: 50px;
-            height: 50px;
-            line-height: 45px;
-            display: block;
-            font-size: 20px;
-            color: #ffffff;
-            background: lightgray;
-            border-radius: 50%;
-            margin: 0 auto 10px auto;
-            padding: 2px
-        }
-
-        #progressbar li:after {
-            content: '';
-            width: 100%;
-            height: 2px;
-            background: lightgray;
-            position: absolute;
-            left: 0;
-            top: 25px;
-            z-index: -1
-        }
-
-        #progressbar li.active:before,
-        #progressbar li.active:after {
-            background: #673AB7
-        }
-
-    .progress {
-        height: 20px
-    }
-
-    .progress-bar {
-        background-color: #673AB7
-    }
-
-    .fit-image {
-        width: 100%;
-        object-fit: cover
-    }
-
-
-
-
-    /*cartão*/
-
-    .checkout-panel {
-        display: flex;
-        flex-direction: column;
-        width: 940px;
-        height: 766px;
-        background-color: rgb(255, 255, 255);
-        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .2);
-    }
-
-    .panel-body {
-        padding: 45px 80px 0;
-        flex: 1;
-    }
-
-
-    .payment-method {
-        display: flex;
-        margin-bottom: 60px;
-        justify-content: space-between;
-    }
-
-    .method {
-        display: flex;
-        flex-direction: column;
-        width: 382px;
-        height: 122px;
-        padding-top: 20px;
-        cursor: pointer;
-        border: 1px solid transparent;
-        border-radius: 2px;
-        background-color: rgb(249, 249, 249);
-        justify-content: center;
-        align-items: center;
-    }
-
-    .card-logos {
-        display: flex;
-        width: 150px;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .radio-input {
-        margin-top: 20px;
-    }
-
-    input[type='radio'] {
-        display: inline-block;
-    }
-
-    .input-fields label {
-        color: #b4b4b4;
-    }
-
-    .info {
-        font-size: 12px;
-        font-weight: 300;
-        display: block;
-        margin-top: 50px;
-        opacity: .5;
-        color: #2e2e2e;
-    }
-
-    input[type='text'],
-    input[type='password'] {
-        font-size: 16px;
-        width: 100%;
-        height: 50px;
-        padding-right: 40px;
-        padding-left: 16px;
-        color: rgba(46, 46, 46, .8);
-        border: 1px solid rgb(225, 225, 225);
-        border-radius: 4px;
-        outline: none;
-    }
-
-        input[type='text']:focus,
-        input[type='password']:focus {
-            border-color: #673AB7;
-        }
-
-    #date {
-        background: url(img/icons_calendar_black.png) no-repeat 95%;
-    }
-
-    #cardholder {
-        background: url(img/icons_person_black.png) no-repeat 95%;
-    }
-
-    #cardnumber {
-        background: url(img/icons_card_black.png) no-repeat 95%;
-    }
-
-    #verification {
-        background: url(img/icons_lock_black.png) no-repeat 95%;
-    }
-</style>
 <div class="container-fluid">
     <div class="row justify-content-center">
         <div class="col-11 col-sm-9 col-md-7 col-lg-6 col-xl-5 text-center p-0 mt-3 mb-2">
-            <div class="card px-0 pt-4 pb-0 mt-3 mb-3">
+            <div name="PagSejaPremium" class="card px-0 pt-4 pb-0 mt-3 mb-3">
                 <h2 id="heading">Pagamento em andamento</h2>
                 <p>preencha todos os campos para próxima etapa</p>
                 <form id="msform">
@@ -336,11 +40,11 @@
                                     <h3 class="">
                                         Estude programação se divertindo e aprenda mais
                                     </h3>
-                                    <p class="lead my-3">
+                                    <p name="PagSejaPremium" class="lead my-3">
                                         Esta é uma assinatura recorrente:
                                         A assinatura será debitado o valor de R$49,90 mensalmente no seu cartão.
                                     </p>
-                                    <p class="lead my-3">
+                                    <p name="PagSejaPremium" class="lead my-3">
                                         Tempo mínimo de permanência:
                                         Mínimo de 12 meses de assinatura.
                                     </p>
@@ -356,7 +60,7 @@
                                 <label class="fieldlabels">Confirm Password: *</label>
                                 <input type="password" name="cpwd" placeholder="Confirm Password" />*@
                         </div>
-                        <input type="button" name="next" class="next action-button" value="Próximo" />
+                        <input type="button" name="PagPremium" class="next action-button" value="Próximo" />
                     </fieldset>
                     <fieldset>
                         <div class="form-card">
@@ -378,43 +82,45 @@
                                             </div>
 
                                             <div class="radio-input">
-                                                <input id="card" type="radio" name="payment">
-                                                Pay AU$20.99 with credit card
+                                                <input name="PagPremium" id="card" type="radio">
+                                                Pague R$20.99 com cartão de crédito
                                             </div>
                                         </label>
 
                                         <label for="paypal" class="method col-lg-6">
                                             <img src="https://designmodo.com/demo/checkout-panel/img/paypal_logo.png" />
                                             <div class="radio-input">
-                                                <input id="paypal" type="radio" name="payment">
-                                                Pay AU$20.99 with PayPal
+                                                <input name="PagPremium" id="paypal" type="radio">
+                                                Pague R$20.99 com PayPal
                                             </div>
                                         </label>
                                     </div>
 
                                     <div class="row input-fields col-lg-12">
                                         <div class="col-lg-6">
-                                            <label for="cardholder">Name</label>
-                                            <input type="text" id="cardholder" />
+                                            <label for="cardholder">Nome</label>
+                                            <input name="PagPremium" type="text" id="cardholder" />
                                         </div>
 
                                         <div class="col-lg-6">
-                                            <label for="cardholder">Name</label>
-                                            <input type="text" id="cardholder" />
+                                            <label for="cardholder">Numero</label>
+                                            <input name="PagPremium" type="text" id="cardholder" />
                                         </div>
 
                                         <div class="col-lg-3">
-                                            <label for="date">Valid date</label>
-                                            <input type="text" id="date" />
+                                            <label for="date">Data de validade</label>
+                                            <input name="PagPremium" type="text" id="date" />
                                         </div>
 
                                         <div class="col-lg-3">
-                                            <label for="verification">CVV / CVC *</label>
-                                            <input type="password" id="verification" />
+                                            <label for="verification">CVC *</label>
+                                            <input name="PagPremium" type="password" id="verification" />
                                         </div>
 
                                         <div class="col-lg-6">
-                                            <span class="info">* CVV or CVC is the card security code, unique three digits number on the back of your card separate from its number.</span>
+                                            <span class="info">
+                                                * CVC é o código de segurança do cartão, número exclusivo de três dígitos no verso do seu cartão, separado do número.
+                                            </span>
                                         </div>
                                     </div>
                                 </div>
@@ -430,8 +136,8 @@
                                 <input type="text" name="phno_2" placeholder="Alternate Contact No." />*@
                         </div>
 
-                        <input type="button" name="next" class="next action-button" value="Próximo" />
-                        <input type="button" name="previous" class="previous action-button-previous" value="Anterior" />
+                        <input type="button" name="PagPremium" class="next action-button" value="Próximo" />
+                        <input type="button" name="PagPremium" class="previous action-button-previous" value="Anterior" />
                     </fieldset>
                     <fieldset>
                         <div class="form-card">
@@ -446,28 +152,28 @@
                             <div class="jumbotron p-3 p-md-5 mt-5 rounded bg-light">
                                 <div class="row">
                                     <div class="row col-lg-12">
-                                        <p><strong>Nome:</strong> Usuário logado</p>
+                                        <p name="PagSejaPremium"><strong>Nome:</strong> Usuário logado</p>
                                     </div>
                                     <div class="row col-lg-12">
-                                        <p><strong>CPF:</strong> XXX.XXX.XXX.XX</p>
+                                        <p name="PagSejaPremium"><strong>CPF:</strong> XXX.XXX.XXX.XX</p>
                                     </div>
                                     <div class="row col-lg-12">
-                                        <p><strong>Cartão:</strong> XXXX.XXXX.XXXX.XXXX</p>
+                                        <p name="PagSejaPremium"><strong>Cartão:</strong> XXXX.XXXX.XXXX.XXXX</p>
                                     </div>
                                     <div class="row col-lg-12">
-                                        <p><strong>Vencimento:</strong> XX/XX</p>
+                                        <p name="PagSejaPremium"><strong>Vencimento:</strong> XX/XX</p>
                                     </div>
                                     <div class="row col-lg-12">
-                                        <p><strong>CVC:</strong> XXX</p>
+                                        <p name="PagSejaPremium"><strong>CVC:</strong> XXX</p>
                                     </div>
                                     <div class="row col-lg-12">
-                                        <p><strong>Titular:</strong> XXX.XXX.XXX.XX</p>
+                                        <p name="PagSejaPremium"><strong>Titular:</strong> XXX.XXX.XXX.XX</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <input type="button" name="next" class="next action-button" value="Próximo" />
-                        <input type="button" name="previous" class="previous action-button-previous" value="Anterior" />
+                        <input type="button" name="PagPremium" class="next action-button" value="Próximo" />
+                        <input type="button" name="PagPremium" class="previous action-button-previous" value="Anterior" />
                     </fieldset>
                     <fieldset>
                         <div class="form-card">
