--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -436,7 +436,7 @@
             align-items: center;
             justify-content: center;
             color: #FBFBFB;
-            font-size: 14px;
+            font-size: 14px;baianBrasil catJAM 
             font-weight: 500;
             width: 33%;
             padding-top: 3px;
@@ -535,11 +535,13 @@
 
                     <ul class="menu-content">
 
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/Conteudo" class="menu-user-assine-topo">Criar Conteudo</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/Curso" class="menu-user-assine-topo">Criar Curso</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/Anexo" class="menu-user-assine-topo">Criar Anexo</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/Usuarios" class="menu-user-assine-topo">Todos Usuarios</a></li>
-                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Admin/QuestaoAndResposta" class="menu-user-assine-topo">Criar Questão e Resposta </a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Conteudoes/Index" class="menu-user-assine-topo">Criar Conteudo</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Cursoadmin/Index" class="menu-user-assine-topo">Criar Curso</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Anexoes/Index" class="menu-user-assine-topo">Criar Anexo</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Usuariosadmin/Index" class="menu-user-assine-topo">Todos Usuarios</a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Questoes/Index" class="menu-user-assine-topo">Criar Questão e Resposta </a></li>
+                        <li class="menu-content-item menu-content-item-destaque"><a href="~/Moduloes/Index" class="menu-user-assine-topo">Criar Modulos </a></li>
+
                     </ul>
 
                     <div class="menu-container-rodape">
