--- a/Views/Anexoes/Index.cshtml
+++ b/Views/Anexoes/Index.cshtml
@@ -5,10 +5,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
  
+
 <div class="container">
+
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
+    <form class="row" asp-controller="Index" asp-action="Index" method="post">
+        <div class="col-6">
+            <div class="input-group input-group-sm mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Procurar</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
+            </div>
+        </div>
+        <div class="col-6">
+            <button type="submit" class="btn-sm btn-success">Procurar</button>
+        </div>
+    </form>
     <table class="table">
         <tr>
             <th>
