--- a/Views/Moduloes/Index.cshtml
+++ b/Views/Moduloes/Index.cshtml
@@ -2,11 +2,24 @@
 <div class="container">
 
     @{ ViewBag.Title = "Index"; }
-     
+
 
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
+    <form class="row" asp-controller="Moduloes" asp-action="Index" method="post">
+        <div class="col-6">
+            <div class="input-group input-group-sm mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Procurar</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" name="txtProcurar">
+            </div>
+        </div>
+        <div class="col-6">
+            <button type="submit" class="btn-sm btn-success">Procurar</button>
+        </div>
+    </form> 
     <table class="table">
         <tr>
             <th>
@@ -20,20 +33,20 @@
 
         @foreach (var item in Model)
         {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.Curso.Nome)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.Titulo)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-    </td>
-</tr>
-}
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Curso.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Titulo)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
 
     </table>
 </div>
